# decoy

./: .gitignore  CMakeLists.txt  README.md  build.bat  dummy.c  dummy.rc  manager.c  manager.rc
masm32/: README.md  dummy.asm  dummy.rc  makeit.bat
resources/: dummy.rc  manager.rc
src/: args.c  args.h  banner.c  banner.h  dummy.c  manager.c  process_control.c  process_control.h  utils.c  utils.h
